--- a/Frontend/src/app/components/auth-area/login/login.component.html
+++ b/Frontend/src/app/components/auth-area/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<form (submit)="login()">
+    <div class="container">
+      <h1>Register</h1>
+      <p>Please fill in this form to create an account.</p>
+      <hr>
+  
+      <label for="email"><b>Email</b></label>
+      <input type="text" placeholder="Enter Email" name="email" id="email" required [(ngModel)]="credentials.username">
+  
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" id="psw" required [(ngModel)]="credentials.password">
+  
+      <hr>
+  
+      <button class="registerbtn">Register</button>
+    </div>
+    
+  </form>
