--- a/Frontend/src/app/components/auth-area/register/register.component.html
+++ b/Frontend/src/app/components/auth-area/register/register.component.html
@@ -1,1 +1,41 @@
-<p>register works!</p>
+<form (submit)="register()" #formInfo="ngForm">
+  <div class="container">
+    <h1>Register</h1>
+    <p>Please fill in this form to create an account.</p>
+    <hr>
+
+    <label for="firstName"><b>שם פרטי</b></label>
+    <input type="text" name="firstName" id="firstName" required [(ngModel)]="user.firstName" #firstName="ngModel">
+
+    <label for="username"><b>שם משפחה</b></label>
+    <input type="text" placeholder="Enter lsatname" name="username" id="email" required [(ngModel)]="user.lastName"
+      #lastName="ngModel">
+
+    <label for="username"><b>שם משתמש</b></label>
+    <input type="text" placeholder="Enter username" name="username" id="email" required [(ngModel)]="user.username"
+      #username="ngModel">
+
+    <label for="dateOfBirth"><b>dateOfBirth</b></label>
+    <input type="date" placeholder="Enter dateOfBirth" name="dateOfBirth" id="email" required
+      [(ngModel)]="user.dateOfBirth" #dateOfBirth="ngModel">
+
+
+    <select name="roleId" [(ngModel)]="user.role" #role="ngModel" required>
+      <option *ngFor="let c of roles" value={{c.ID}}>{{c.Value}}</option>
+    </select>
+
+    <label for="email"><b>מייל</b></label>
+    <input type="email" placeholder="Enter email" name="email" id="email" required [(ngModel)]="user.email"
+      #email="ngModel">
+
+    <label for="psw"><b>סיסמה</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" id="psw" required [(ngModel)]="user.password"
+      #password="ngModel">
+
+
+    <hr>
+
+    <button class="registerbtn">Register</button>
+  </div>
+
+</form>
