--- a/Frontend/src/app/components/layout-area/layout/layout.component.html
+++ b/Frontend/src/app/components/layout-area/layout/layout.component.html
@@ -1,5 +1,6 @@
 <div>
-  <router-outlet>
-    <app-doctor-card></app-doctor-card>
-  </router-outlet>
+  <header>
+    <app-header></app-header>
+  </header>
+  <router-outlet></router-outlet>
 </div>
