--- a/Frontend/src/app/components/doctor-area/doctor-list/doctor-list.component.html
+++ b/Frontend/src/app/components/doctor-area/doctor-list/doctor-list.component.html
@@ -1,1 +1,5 @@
-<p>doctor-list works!</p>
+<div>
+  <div *ngFor="let d of doctors">
+    <app-doctor-card [doctor]="d"></app-doctor-card>
+  </div>
+</div>
